--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/ALAB-ctrl" target="_blank">A Paquet</a> and is
+          <a href="https://github.com/ALAB-ctrl/Ops-Challenge" target="_blank"> on GitHub</a> and
+          <a href="https://dazzling-pegasus-06ef58.netlify.app" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
